# otlet

./: .gitignore  Cargo.toml  LICENSE  README.md
benchmarks/: README.md  find_candidates.py  fixtures.sql  lib.sh  model_artifacts.sh  models.tsv  models_metadata.tsv  quick_probe.sh  refresh-metadata.py  report.py  report_charts.py  report_compare.py  report_io.py  run.sh  (+5 more)
crates/otlet_pg/: Cargo.toml  otlet.control
crates/otlet_pg/sql/: 010_core_schema.sql  01_identity_contract.sql  01_schema.sql  020_identity_contract.sql  02_runtime_models.sql  030_action_schema.sql  03_tasks_scan.sql  040_semantic_schema.sql  04_runtime_health.sql  050_runtime_models.sql  05_action_contract.sql  05_actions_review.sql  05_eval_labels.sql  05_jobs_lifecycle.sql  060_tasks_scan.sql  06_action_review_status.sql  06_inference_receipt_status.sql  06_receipt_trace_status.sql  070_runtime_health.sql  075_database_health.sql  07_trace_tokens.sql  080_job_claims.sql  085_portable_schema.sql  08_trace_visibility.sql  090_job_attempts.sql  09_runtime_status.sql  100_job_cancellation.sql  10_semantic_stale.sql  110_job_terminal_recovery.sql  11_semantic_index.sql  120_action_contract.sql  125_portable_result_validation.sql  12_semantic_join_core.sql  130_action_completion_review.sql  135_portable_worker_protocol.sql  13_semantic_join_plan.sql  140_action_execution.sql  14_semantic_programs.sql  150_eval_labels.sql  155_workload_evaluation.sql  (+34 more)
crates/otlet_pg/src/: infer_now.rs  infer_now_client.rs  infer_now_status.rs  job.rs  lib.rs  runtime.rs  wake.rs  worker.rs  worker_batch.rs  worker_completion.rs  worker_selection.rs
crates/otlet_pg/src/custom_scan/: callbacks.rs  child_plan.rs  counters.rs  explain.rs  infer_prefetch.rs  infer_provenance.rs  infer_queue.rs  mod.rs  planner.rs  policy.rs  predicate_parse.rs  private.rs  programs.rs  semantic_state.rs  slot_input.rs  source_validation.rs  sql.rs  state.rs
crates/otlet_pg/src/model/: artifact.rs  cache.rs  cache_tests.rs  fingerprint.rs  linked.rs  linked_decode.rs  linked_ffi.rs  linked_load.rs  linked_prefix_cache.rs  linked_support.rs  linked_tests.rs  memory.rs  mod.rs  output.rs  prompt_contracts.rs  response.rs  run.rs  trace.rs
crates/otlet_pg/src/semantic_fdw/: callbacks.rs  cost.rs  explain.rs  mod.rs  pg.rs  plan.rs  private.rs  quals.rs  runtime_params.rs
crates/otlet_worker/: Cargo.toml
crates/otlet_worker/src/: main.rs
(+78 files in other folders)
