[package]
name = "otlet_pg"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18"]
# Compatibility alias; linked llama.cpp is mandatory in this package
linked-llama = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("pg13", "pg14", "pg15", "pg16", "pg17", "pg18", "linked-llama"))'] }

[dependencies]
jsonschema = { version = "0.46.5", default-features = false }
llama-cpp-sys-4 = "0.3.1"
pgrx = "=0.18.1"
serde_json = "1"
