[package]
name = "otlet_pg"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg18", "native", "openmp"]
pg18 = ["pgrx/pg18"]
# Compile llama.cpp for the build host's CPU (e.g. ARM dotprod/i8mm, x86 AVX).
# The setup script builds inside the same container that runs the worker, so
# this is safe there; disable for builds that must be portable across machines.
native = ["llama-cpp-sys-4/native"]
# Parallelize ggml matrix ops across CPU cores (requires libgomp at runtime).
openmp = ["llama-cpp-sys-4/openmp"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("pg13", "pg14", "pg15", "pg16", "pg17", "pg18", "native", "openmp"))'] }

[dependencies]
jsonschema = { version = "0.46.5", default-features = false }
llama-cpp-sys-4 = "0.3.1"
pgrx = "=0.18.1"
serde_json = "1"
