[package]
name = "otlet_worker"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["native", "openmp"]
native = ["llama-cpp-sys-4/native"]
openmp = ["llama-cpp-sys-4/openmp"]

[dependencies]
llama-cpp-sys-4 = "0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
